# llm-prompt-tag

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_prompt_tag/: __init__.py
tests/: test_llm_prompt_tag.py  test_tag.py
