[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "llm-prompt-tag"
version = "0.1.0"
description = "Tag prompt sections with named labels and metadata. Track which section contributed to a response, A/B test variants, and compose system prompts from tagged parts. Zero runtime deps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "llm",
  "ai",
  "prompt",
  "tagging",
  "prompt-engineering",
  "agents",
  "a-b-testing",
  "metadata",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-prompt-tag"
Issues = "https://github.com/MukundaKatta/llm-prompt-tag/issues"
Source = "https://github.com/MukundaKatta/llm-prompt-tag"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_prompt_tag"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
