[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prompt-tag"
version = "0.1.0"
description = "Named, prioritized, togglable sections for composing LLM system prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "prompt", "template", "sections", "system-prompt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
