[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prompt-tag"
version = "0.1.0"
description = "Named, prioritized, togglable sections for composing LLM system prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "prompt", "template", "sections", "system-prompt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-prompt-tag"
Repository = "https://github.com/MukundaKatta/llm-prompt-tag"
Issues = "https://github.com/MukundaKatta/llm-prompt-tag/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_prompt_tag = ["py.typed"]

[tool.ruff]
line-length = 100
